--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "http-status-codes": "^2.3.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.1",
     "morgan": "^1.10.0",
